--- a/SnowballCallendar/pom.xml
+++ b/SnowballCallendar/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-extras</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>Callendar</finalName>
