--- a/SnowballCallendar/pom.xml
+++ b/SnowballCallendar/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>tiles-extras</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>Callendar</finalName>
